# studious-fiesta

./: Automaton.h  BlockCommentAutomaton.h  CMakeLists.txt  ColonDashAutomaton.h  CommentAutomaton.h  DatalogProgam.h  IDAutomaton.h  Lexer.h  Parser.h  PeriodAutomaton.h  Predicate.h  QueriesAutomaton.h  QuestionAutomaton.h  README.md  RIGHT_PAREN_Automaton.h  Rule.h  Token.h  UndefinedStringAutomaton.h  lab1  main.cpp
__MACOSX/: AddAutomaton.h  ColonAutomaton.h  CommaAutomaton.h  EOFAutomaton.h  EmptyString.h  FactsAutomaton.h  LEFT_PAREN_Automaton.h  Lexer.h  MultiplyAutomaton.h  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.h  Token.h  UndefinedCharAutomaton.h
